@@ -1,5 +1,7 @@
-S3method(print,wald)
 export(bfactor)
+exportClasses(ConfirmatoryClass)
+exportClasses(ExploratoryClass)
+exportClasses(MultipleGroupClass)
 export(confmirt)
 export(confmirt.model)
 export(expand.table)
@@ -8,26 +10,24 @@ export(fscores)
 export(iteminfo)
 export(itemplot)
 export(key2binary)
-export(mirt)
-export(multipleGroup)
-export(simdata)
-export(wald)
-exportClasses(ConfirmatoryClass)
-exportClasses(ExploratoryClass)
-exportClasses(MultipleGroupClass)
 exportMethods(anova)
 exportMethods(fitted)
 exportMethods(fscores)
 exportMethods(itemplot)
 exportMethods(residuals)
 exportMethods(summary)
-import(GPArotation)
-import(MASS)
-import(Matrix)
-import(lattice)
-import(mvtnorm)
-import(psych)
+export(mirt)
+export(multipleGroup)
+export(simdata)
+export(wald)
 importFrom(stats,anova)
 importFrom(stats,fitted)
 importFrom(stats,residuals)
+import(GPArotation)
+import(lattice)
+import(MASS)
+import(Matrix)
+import(mvtnorm)
+import(psych)
+S3method(print,wald)
 useDynLib(mirt)
