@@ -60,6 +60,13 @@
 #' @param upper initial (or fixed) upper bound parameters for 4-PL model. Can be 
 #' entered as a single value to assign a global upper bound parameter or may be entered as a 
 #' numeric vector corresponding to each item
+#' @param free.start a list containing the start value and logical indicating whether a given parameter 
+#' is to be freely estimated. Each element of the list consists of three components, the parameter
+#' number, the starting (or fixed) value, and a logical to indicate whether the parameter is free. For
+#' example, \code{free.start = list(c(20,0,FALSE), c(10,1.5,TRUE))} would fix parameter 20 to 0 while
+#' parameter 10 would be freely estimated with a starting value of 1.5. Note that this will override 
+#' the values specified by a user defined \code{startvalues} or \code{freepars} input for the specified
+#' parameters
 #' @param printvalue a numeric value to be specified when using the \code{res='exp'}
 #' option. Only prints patterns that have standardized residuals greater than 
 #' \code{abs(printvalue)}. The default (NULL) prints all response patterns
@@ -160,7 +167,7 @@
 #' IL: Scientific Software International.
 #' @keywords models
 #' @usage 
-#' confmirt(data, model, itemtype = NULL, guess = 0, upper = 1, startvalues = NULL, 
+#' confmirt(data, model, itemtype = NULL, guess = 0, upper = 1, free.start = NULL, startvalues = NULL, 
 #' constrain = NULL, freepars = NULL, parprior = NULL, verbose = TRUE, calcLL = TRUE, 
 #' draws = 2000, debug = FALSE, rotate = 'varimax', Target = NULL, 
 #' technical = list(),  ...)
@@ -267,7 +274,8 @@
 #' 
 #' }
 #' 
-confmirt <- function(data, model, itemtype = NULL, guess = 0, upper = 1, startvalues = NULL, 
+confmirt <- function(data, model, itemtype = NULL, guess = 0, upper = 1, free.start = NULL,
+                     startvalues = NULL, 
                      constrain = NULL, freepars = NULL, parprior = NULL, verbose = TRUE, calcLL = TRUE, 
                      draws = 2000, debug = FALSE, rotate = 'varimax', Target = NULL, 
                      technical = list(),  ...)
@@ -295,7 +303,7 @@ confmirt <- function(data, model, itemtype = NULL, guess = 0, upper = 1, startva
     parnumber <- 1
 	PrepList <- PrepData(data=data, model=model, itemtype=itemtype, guess=guess, upper=upper, 
                          startvalues=startvalues, constrain=constrain, freepars=freepars, 
-	                     parprior=parprior, verbose=verbose, debug=debug, 
+	                     parprior=parprior, verbose=verbose, debug=debug, free.start=free.start,
                          technical=technical, parnumber=parnumber)           
     if(RETURN) return(PrepList)
  	ESTIMATE <- MHRM(pars=PrepList$pars, 
