@@ -2,6 +2,9 @@
 mirt 0.4.0
 ----------------------------------------------------------------
 
+* Added free.start list option for all estimation functions. Allows a quicker way to 
+  specify free and fixed parameters
+
 * Added iteminfo() and extract.item() to calculate the item information and extract 
   desired items
 
